--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-server-express": "^3.13.0",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
     "express": "^4.17.1",
     "graphql": "^16.6.0",
     "mongoose": "^7.0.2"
