--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "apollo-server-express": "^3.13.0",
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
     "graphql": "^16.6.0",
     "mongoose": "^7.0.2"
